--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       const checkoutButton = document.getElementById('checkout-button');
 
       checkoutButton.addEventListener('click', () => {
-        fetch('stripeiq-frantunn.amvera.io/create-checkout-session', {
+        fetch('https://stripeiq-frantunn.amvera.io/create-checkout-session', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
