--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
 
     <script type="text/javascript">
       const url = 'https://stripeiq-frantunn.amvera.io';
-      const stripe = Stripe(
-        'pk_test_51PNcn6RrQfUQC5MYaOchK1YrrDtBrxRDbyzQ2rfUIw7QhiIPmOU0vLYBq17pyMSQKAw99bqVnmeYGELIq2KOncST00ysRkRCO0'
-      );
+      const stripe = Stripe('ваш публичный ключ Stripe');
 
       const checkoutButton = document.getElementById('checkout-button');
 
       checkoutButton.addEventListener('click', async () => {
         try {
+          // Запрос к `get-api-key` без авторизации
           const response = await fetch(`${url}/get-api-key`, { method: 'GET' });
 
           if (!response.ok) {
@@ -29,6 +28,7 @@
 
           const { apiKey } = await response.json();
 
+          // Использование полученного API-ключа для создания сессии оплаты
           const sessionResponse = await fetch(
             `${url}/create-checkout-session`,
             {
@@ -43,13 +43,13 @@
           const session = await sessionResponse.json();
 
           if (sessionResponse.ok) {
-            stripe
-              .redirectToCheckout({ sessionId: session.id })
-              .then(result => {
-                if (result.error) {
-                  alert(result.error.message);
-                }
-              });
+            // Перенаправление на Stripe для завершения платежа
+            const result = await stripe.redirectToCheckout({
+              sessionId: session.id,
+            });
+            if (result.error) {
+              alert(result.error.message);
+            }
           } else {
             console.error('Error creating checkout session:', session);
           }
