--- a/index.html
+++ b/index.html
@@ -44,12 +44,15 @@
 
           if (sessionResponse.ok) {
             // Перенаправление на Stripe для завершения платежа
-            const result = await stripe.redirectToCheckout({
-              sessionId: session.id,
-            });
-            if (result.error) {
-              alert(result.error.message);
-            }
+            stripe
+              .redirectToCheckout({
+                sessionId: session.id,
+              })
+              .then(result => {
+                if (result.error) {
+                  alert(result.error.message);
+                }
+              });
           } else {
             console.error('Error creating checkout session:', session);
           }
